--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -11,40 +11,43 @@
 
   <h1 class="ion-text-center">Pessoas</h1>
 
+
   <ion-item>
-    <ion-label position="floating">Nome</ion-label>
-    <ion-input></ion-input>
+    <ion-label position="floating">Nome:</ion-label>
+    <ion-input [(ngModel)]="usuario.nome"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">CPF</ion-label>
-    <ion-input></ion-input>
+    <ion-label position="floating">CPF:</ion-label>
+    <ion-input [(ngModel)]="usuario.cpf"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Data de Nascimento</ion-label>
-    <ion-input></ion-input>
+    <ion-label position="floating">Data de Nascimento:</ion-label>
+    <ion-input [(ngModel)]="usuario.dataNascimento"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Telefone</ion-label>
-    <ion-input></ion-input>
+    <ion-label position="floating">Telefone:</ion-label>
+    <ion-input [(ngModel)]="usuario.telefone"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Email</ion-label>
-    <ion-input></ion-input>
+    <ion-label position="floating">Email:</ion-label>
+    <ion-input [(ngModel)]="usuario.email"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Senha</ion-label>
-    <ion-input></ion-input>
+    <ion-label position="floating">Senha:</ion-label>
+    <ion-input [(ngModel)]="usuario.senha"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Confirmar Senha</ion-label>
-    <ion-input></ion-input>
+    <ion-label position="floating">Confirmar Senha:</ion-label>
+    <ion-input [(ngModel)]="confSenha"></ion-input>
   </ion-item>
+
+  <ion-button expand="block" color="primary" (click)='salvar'>Salvar</ion-button>
 
   <ion-button routerLink="/home" expand="block" color="dark">Voltar</ion-button>
 
